Addition Of Various Files after file corruption

--- a/itis3135/assignments.html
+++ b/itis3135/assignments.html
@@ -55,6 +55,14 @@
             <ul>
                 <li><a href="slideshow.html">Activity #9 - Slideshow</a></li>
             </ul>
+            <h3>September 9th, 2022</h3>
+            <ul>
+                <li><a href="travelthroughspace.info/">Client Project Website(Work In Progress)</a></li>
+            </ul>
+            <h3>September 9th, 2022</h3>
+            <ul>
+                <li><a href="#">Activity #10 - Slideshow</a></li>
+            </ul>
         </section>
     </main>
 
