--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -153,6 +153,12 @@
             text-align: center;
             padding: 35px;
         }
+        p > a {
+            text-decoration: underline;
+        }
+        p > a:hover {
+            color: #aaaaaa;
+        }
         footer h3{
             color: white;
             font-family: serif;
@@ -234,7 +240,7 @@
             <section id="home" class="target">
                 <h2>Home</h2>
                 <section class="cardSection">
-                    <h3>Why Card Games?</h3>
+                    <h3>Whats Cool about Card Games?</h3>
                     <p>Card Games have existed for over a millennium and are still popular today even if through different mediums. It is estimated that there are anywhere from 1,000 to 10,000 different card games based on what you define as a card game. This is crazy to think about since truthfully there are only 52 (no joker cards) total cards in a deck. Even knowing this there is actually 52! (8e67) ways of shuffling a single deck! Cards although may be simple paper with designs on them, have the ability to entertain almost anyone as there is surely a game made for everyone.</p>
                 </section>
                 <section class="cardSection">
@@ -261,25 +267,12 @@
                 <h2>About Me</h2>
                 <section class="cardSection">
                     <h3>How Long Have I Played?</h3>
-                    <p>I have been playing varying card games since I was around 5 years old. Started with the good old Bak</p>
+                    <p>I have been playing varying card games since I was around 5 years old. Started with the good old Blackjack and slowly progressed through the various games. I eventually even had a phase where I became obsessed with card magic though I ultimately gave up on this. </p>
                 </section>
                 <section class="cardSection">
-                    <h3>What are some card games?</h3>
-                    <p>As mentioned earlier there are thousands of card games but I have provided some of the more popular ones below that will be our primary focus throughout this page:</p>
-                    <ul>
-                        <li>Blackjack</li>
-                        <li>Poker</li>
-                        <li>Cheat (aka BS)</li>
-                        <li>SlapJack</li>
-                        <li>Spades</li>
-                    </ul>
-                </section>
-                <section class="cardSection">
-                    <h3>What are the cards?</h3>
-                    <p>So now that we know a little about card games, you may be wondering what are the actual cards? Feel free to follow along with the image below to better see how the cards actually look. Well there are 4 different suits each which have 13 cards. The easier to distinguish are the number cards ranging from 2-10. Beyond the number cards we have the face cards which are the Jack, Queen, King. The value of these cards change depending on the game that is being played. The last card is the Ace card which is marked by the letter A on the card. Now that we know the cards we can continue to the suites. Each of these cards exist in each of the suites. These suites are also further broken down into colors which is red and black. The diamond and heart suites are red while the clubs and spades are black. This detail can have significance in some games but not in all. </p>
-                    <div class="center">
-                        <img src="images/deckofcards.png" alt="All 52 cards in the deck" width="400">
-                    </div>
+                    <h3>What cards decks do I have?</h3>
+                    <p>Now I honeslty dont know the answer to this and honeslty am too lazy to go through and look at all of them but let me just say that it is probably more than you think. I have a ton of decks that I have collected over the years each with their own story. It sort of became a cool thing to collect to me after a while and even now if I see a different one I buy it as soon as I can. (Lets pretend this one below is an example cause like I said I am lazy.)</p>
+                    <div class="center"><img src="images/card-deck-collection.jpeg" alt="Card Collection" width="400"></div>
                 </section>
             </section>
             <!-- When Page -->
@@ -301,26 +294,13 @@
             <section id="where" class="target">
                 <h2>Where Can You Play Cards?</h2>
                 <section class="cardSection">
-                    <h3>Why Card Games?</h3>
-                    <p>Card Games have existed for over a millennium and are still popular today even if through different mediums. It is estimated that there are anywhere from 1,000 to 10,000 different card games based on what you define as a card game. This is crazy to think about since truthfully there are only 52 (no joker cards) total cards in a deck. Even knowing this there is actually 52! (8e67) ways of shuffling a single deck! Cards although may be simple paper with designs on them, have the ability to entertain almost anyone as there is surely a game made for everyone.</p>
+                    <h3>Are fun with cards limited?</h3>
+                    <p>Cards quite honestly can be played anywhere! That is one of the amazing aspects about it. When it really comes down to it, the only limitation to the excitement card games offer is one's willingness to play card games. You can do this in your living room with the TV on, in the kitchen while you are cooking, or even in the walmart on one of their tables!</p>
+                    <img src="images/old-men-cards.jpeg">
                 </section>
                 <section class="cardSection">
-                    <h3>What are some card games?</h3>
-                    <p>As mentioned earlier there are thousands of card games but I have provided some of the more popular ones below that will be our primary focus throughout this page:</p>
-                    <ul>
-                        <li>Blackjack</li>
-                        <li>Poker</li>
-                        <li>Cheat (aka BS)</li>
-                        <li>SlapJack</li>
-                        <li>Spades</li>
-                    </ul>
-                </section>
-                <section class="cardSection">
-                    <h3>What are the cards?</h3>
-                    <p>So now that we know a little about card games, you may be wondering what are the actual cards? Feel free to follow along with the image below to better see how the cards actually look. Well there are 4 different suits each which have 13 cards. The easier to distinguish are the number cards ranging from 2-10. Beyond the number cards we have the face cards which are the Jack, Queen, King. The value of these cards change depending on the game that is being played. The last card is the Ace card which is marked by the letter A on the card. Now that we know the cards we can continue to the suites. Each of these cards exist in each of the suites. These suites are also further broken down into colors which is red and black. The diamond and heart suites are red while the clubs and spades are black. This detail can have significance in some games but not in all. </p>
-                    <div class="center">
-                        <img src="images/deckofcards.png" alt="All 52 cards in the deck" width="400">
-                    </div>
+                    <h3>What about online card games?</h3>
+                    <p>These are always available so as long as you have it either downloaded or have internet, then you can virtually(pun intended) play it anywhere! At this point going through all of this I am sure that you have no reason not to play!</p>
                 </section>
             </section>
             <!-- Why Page -->
@@ -328,25 +308,9 @@
                 <h2>Why Do I Like Cards?</h2>
                 <section class="cardSection">
                     <h3>Why Card Games?</h3>
-                    <p>Card Games have existed for over a millennium and are still popular today even if through different mediums. It is estimated that there are anywhere from 1,000 to 10,000 different card games based on what you define as a card game. This is crazy to think about since truthfully there are only 52 (no joker cards) total cards in a deck. Even knowing this there is actually 52! (8e67) ways of shuffling a single deck! Cards although may be simple paper with designs on them, have the ability to entertain almost anyone as there is surely a game made for everyone.</p>
-                </section>
-                <section class="cardSection">
-                    <h3>What are some card games?</h3>
-                    <p>As mentioned earlier there are thousands of card games but I have provided some of the more popular ones below that will be our primary focus throughout this page:</p>
-                    <ul>
-                        <li>Blackjack</li>
-                        <li>Poker</li>
-                        <li>Cheat (aka BS)</li>
-                        <li>SlapJack</li>
-                        <li>Spades</li>
-                    </ul>
-                </section>
-                <section class="cardSection">
-                    <h3>What are the cards?</h3>
-                    <p>So now that we know a little about card games, you may be wondering what are the actual cards? Feel free to follow along with the image below to better see how the cards actually look. Well there are 4 different suits each which have 13 cards. The easier to distinguish are the number cards ranging from 2-10. Beyond the number cards we have the face cards which are the Jack, Queen, King. The value of these cards change depending on the game that is being played. The last card is the Ace card which is marked by the letter A on the card. Now that we know the cards we can continue to the suites. Each of these cards exist in each of the suites. These suites are also further broken down into colors which is red and black. The diamond and heart suites are red while the clubs and spades are black. This detail can have significance in some games but not in all. </p>
-                    <div class="center">
-                        <img src="images/deckofcards.png" alt="All 52 cards in the deck" width="400">
-                    </div>
+                    <p>Card Games were always, as weird as it sounds, an escape from reality for myself. I could use this as a way to just take a break and do something with my grandpa that was fun. It was something that I looked forward to after getting back from class. This only became more important when I found groups of friends that loved card games too and we would hold these "tournaments" where we would compete with each other. In short it holds a lot of sentimental value becuase of all the tough times it has gotten me through.</p>
+                    <img src="images/good-friends-playing-cards-game_23-2147718822.jpg" alt="Friends Playing Card Games" width="400">
+                    <p>Also incase you need some more convincing, here is a link to a website that tells you about all the good that comes from playing card games. <a href="https://www.medindia.net/news/top-benefits-of-playing-card-games-208193-1.htm#:~:text=In%20addition%20to%20boosting%20memory,critical%20and%20strategic%20thinking%20skills." target="_blank">Click Here</a></p>
                 </section>
             </section>
             <!-- Blackjack Page -->
